{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 61,
  "lineage": "f77e10ea-4bbd-1b74-9e4e-eae6aa343722",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:security-group/sg-0983e2b213519a03e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0983e2b213519a03e",
            "ingress": [],
            "name": "kron-cluster-cluster-20260114181722345800000004",
            "name_prefix": "kron-cluster-cluster-",
            "owner_id": "978377355615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kron-cluster-cluster"
            },
            "tags_all": {
              "Name": "kron-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:security-group/sg-032a7a8b97723cc90",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-032a7a8b97723cc90",
            "ingress": [],
            "name": "kron-cluster-node-20260114181719742800000001",
            "name_prefix": "kron-cluster-node-",
            "owner_id": "978377355615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kron-cluster-node",
              "kubernetes.io/cluster/kron-cluster": "owned"
            },
            "tags_all": {
              "Name": "kron-cluster-node",
              "kubernetes.io/cluster/kron-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4218125113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0983e2b213519a03e",
            "security_group_rule_id": "sgr-0867d443c40907ab9",
            "self": false,
            "source_security_group_id": "sg-032a7a8b97723cc90",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3976029509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-032a7a8b97723cc90",
            "security_group_rule_id": "sgr-0f54c574bd9f4bfb3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1654522593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032a7a8b97723cc90",
            "security_group_rule_id": "sgr-091629da230ae871c",
            "self": false,
            "source_security_group_id": "sg-0983e2b213519a03e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-650293958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032a7a8b97723cc90",
            "security_group_rule_id": "sgr-0238c22e75d6bf74b",
            "self": false,
            "source_security_group_id": "sg-0983e2b213519a03e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4018197840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032a7a8b97723cc90",
            "security_group_rule_id": "sgr-082741904d901e78e",
            "self": false,
            "source_security_group_id": "sg-0983e2b213519a03e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4242336113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032a7a8b97723cc90",
            "security_group_rule_id": "sgr-08339cddeaf766fca",
            "self": false,
            "source_security_group_id": "sg-0983e2b213519a03e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2558384826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032a7a8b97723cc90",
            "security_group_rule_id": "sgr-0234c88438b1dcb40",
            "self": false,
            "source_security_group_id": "sg-0983e2b213519a03e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2348818685",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032a7a8b97723cc90",
            "security_group_rule_id": "sgr-099838c14e2876d5b",
            "self": false,
            "source_security_group_id": "sg-0983e2b213519a03e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-108300036",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032a7a8b97723cc90",
            "security_group_rule_id": "sgr-035d6ab126a5110e2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2479001411",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032a7a8b97723cc90",
            "security_group_rule_id": "sgr-0da136d8acdb23906",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-933047468",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-032a7a8b97723cc90",
            "security_group_rule_id": "sgr-085a1fb8990dd7066",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:network-acl/acl-0f3918ab41f7ae1b8",
            "default_network_acl_id": "acl-0f3918ab41f7ae1b8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f3918ab41f7ae1b8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "978377355615",
            "subnet_ids": [
              "subnet-07d544eb5874c0e50",
              "subnet-09135647a4ffc4494",
              "subnet-096c4f8e8f51cd449",
              "subnet-09d66e1bb661ef435"
            ],
            "tags": {
              "Name": "kron-jobs-vpc-default",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-default",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:route-table/rtb-0aaa10867444ae1ad",
            "default_route_table_id": "rtb-0aaa10867444ae1ad",
            "id": "rtb-0aaa10867444ae1ad",
            "owner_id": "978377355615",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "kron-jobs-vpc-default",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-default",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:security-group/sg-0a2d816c5e840bc27",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a2d816c5e840bc27",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "978377355615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kron-jobs-vpc-default",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-default",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0948747384c5ba682",
            "arn": "arn:aws:ec2:us-east-1:978377355615:elastic-ip/eipalloc-0948747384c5ba682",
            "domain": "vpc",
            "id": "eipalloc-0948747384c5ba682",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-85-41-13.compute-1.amazonaws.com",
            "public_ip": "98.85.41.13",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kron-jobs-vpc-us-east-1a",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-us-east-1a",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:internet-gateway/igw-02cc10613288460d1",
            "id": "igw-02cc10613288460d1",
            "owner_id": "978377355615",
            "tags": {
              "Name": "kron-jobs-vpc",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0948747384c5ba682",
            "association_id": "eipassoc-0a805aee436b177f8",
            "connectivity_type": "public",
            "id": "nat-0004513d2a412f48d",
            "network_interface_id": "eni-0c6966fdcbcaca4f0",
            "private_ip": "10.0.101.191",
            "public_ip": "98.85.41.13",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07d544eb5874c0e50",
            "tags": {
              "Name": "kron-jobs-vpc-us-east-1a",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-us-east-1a",
              "kubernetes.io/cluster/kron-cluster": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b95853e0dda80bee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0004513d2a412f48d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b95853e0dda80bee",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02cc10613288460d1",
            "id": "r-rtb-0875a948e8a6277451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0875a948e8a627745",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:route-table/rtb-0b95853e0dda80bee",
            "id": "rtb-0b95853e0dda80bee",
            "owner_id": "978377355615",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "kron-jobs-vpc-private",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-private",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:route-table/rtb-0875a948e8a627745",
            "id": "rtb-0875a948e8a627745",
            "owner_id": "978377355615",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "kron-jobs-vpc-public",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-public",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf3f7bd7d228ee8c",
            "route_table_id": "rtb-0b95853e0dda80bee",
            "subnet_id": "subnet-09d66e1bb661ef435"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096550fef08318adb",
            "route_table_id": "rtb-0b95853e0dda80bee",
            "subnet_id": "subnet-09135647a4ffc4494"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099231334d61b1b56",
            "route_table_id": "rtb-0875a948e8a627745",
            "subnet_id": "subnet-07d544eb5874c0e50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5831b51f73ad284",
            "route_table_id": "rtb-0875a948e8a627745",
            "subnet_id": "subnet-096c4f8e8f51cd449"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:subnet/subnet-09d66e1bb661ef435",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d66e1bb661ef435",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978377355615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kron-jobs-vpc-private-us-east-1a",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-private-us-east-1a",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:subnet/subnet-09135647a4ffc4494",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09135647a4ffc4494",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978377355615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kron-jobs-vpc-private-us-east-1b",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-private-us-east-1b",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:subnet/subnet-07d544eb5874c0e50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d544eb5874c0e50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978377355615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kron-jobs-vpc-public-us-east-1a",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-public-us-east-1a",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:subnet/subnet-096c4f8e8f51cd449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096c4f8e8f51cd449",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978377355615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kron-jobs-vpc-public-us-east-1b",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc-public-us-east-1b",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "vpc_id": "vpc-09cc1f003c939edb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978377355615:vpc/vpc-09cc1f003c939edb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f3918ab41f7ae1b8",
            "default_route_table_id": "rtb-0aaa10867444ae1ad",
            "default_security_group_id": "sg-0a2d816c5e840bc27",
            "dhcp_options_id": "dopt-08e429fb781277f98",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09cc1f003c939edb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aaa10867444ae1ad",
            "owner_id": "978377355615",
            "tags": {
              "Name": "kron-jobs-vpc",
              "kubernetes.io/cluster/kron-cluster": "shared"
            },
            "tags_all": {
              "Name": "kron-jobs-vpc",
              "kubernetes.io/cluster/kron-cluster": "shared"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}